assets/custom.css
/* ... */
.media-drop-shadow-stroke,
.media-drop-shadow-border,
.media-drop-shadow {
  top: unset;
  left: unset;
}


.media-drop-shadow-border,
.media-drop-shadow-stroke {
  z-index: unset;
}


.media-style-placeholder svg {
  width: unset;
  height: unset;
}
.media-style-placeholder--wide svg {
  width: unset;
  height: unset;
}

.media-thumbnail .media-shape-container .media-svg:first-child {
  transition: unset;
}


.media-thumbnail:hover .media-shape-container .media-svg:first-child {
  transform: unset;
}

.media-thumbnail .media-image-container {
  transition: transform 0.1s cubic-bezier(0.215, 0.61, 0.355, 1);
}

.media-thumbnail:hover .media-image-container {
  transform: translate(
    var(--media-drop-shadow-left-size),
    var(--media-drop-shadow-top-size)
  );
}

/* location dropdown select */
#country-selector{
  padding: 0.75rem 1rem;
  font-size: 18px;
}

/* Addon CSS */
.product-addon {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 12px;
  padding: 16px;
  border: 1px solid #783e2b;
  border-radius: 8px;
}

.product-addon:hover {
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
}

.product-addon p,
.product-addon h3 {
  font-size: 16px;
  line-height: 22px;
  font-weight: 500;
  color: #783e2b !important;
}
.product-addon button {
  border: 1px solid #783e2b;
  padding: 5px 20px;
  border-radius: 100px;
  color: #783e2b !important;
  font-weight: 700;
}

.product-addon-content {
  display: flex;
  align-items: center;
  gap: 8px;
}

/* add to cart button BG color */
#add-to-cart-btn span {
  background-color: #d4f871;
}

/* location dropdown select */
#country-selector {
  padding: 0.75rem 1.2rem;
}

/* Product Addon Modal */

.modal-inner {
  z-index: 9999;
  position: relative;
}
.modal-image-container {
  position: relative;
}
.modal-text {
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  /* height: 100%; */
  font-size: 10px;
  text-align: center;
  color: #f8f8f8;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 0;
  transition: opacity 0.2s ease-in-out;
  cursor: pointer;
}
.product-addon:hover .modal-text {
  opacity: 1;
}
.disabled-button {
  opacity: 0.5;
  cursor: not-allowed;
}

@media (max-width: 900px) {
  .modal {
    padding: 0 10%;
  }
  .modal-container {
    flex-direction: column;
  }
}

